--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ yarn-error.log*
 next-env.d.ts
 
 # 忽略 .vscode 文件夹
-.vscode/
+# .vscode/
  
 # 忽略 prettierrc 配置文件（取决于文件的确切名称）
-.prettierrc
+# .prettierrc
